--- a/GameEngine/packages.config
+++ b/GameEngine/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DevIL" version="1.7.8" targetFramework="native" />
+  <package id="DevIL.redist" version="1.7.8" targetFramework="native" />
   <package id="glfw" version="3.2.1.5" targetFramework="native" />
   <package id="glm" version="0.9.9" targetFramework="native" />
   <package id="soil" version="1.16.0" targetFramework="native" />
