--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -117,6 +117,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ComponentModel.cpp" />
+    <ClCompile Include="ComponentPosition.cpp" />
+    <ClCompile Include="ComponentShader.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="GLFWWindow.cpp" />
@@ -135,6 +138,9 @@
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ComponentModel.h" />
+    <ClInclude Include="ComponentPosition.h" />
+    <ClInclude Include="ComponentShader.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="GLFWWindow.h" />
@@ -162,6 +168,12 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Useful Links.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="cube.obj">
+      <FileType>Text</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </Resource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
