--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -90,6 +90,15 @@
     <ClCompile Include="iComponent.cpp">
       <Filter>GameEngineLibraries\Components</Filter>
     </ClCompile>
+    <ClCompile Include="ComponentPosition.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentModel.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentShader.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -144,6 +153,15 @@
     <ClInclude Include="iComponent.h">
       <Filter>GameEngineLibraries\Components</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentPosition.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentModel.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentShader.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngine.rc" />
@@ -153,5 +171,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Useful Links.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="cube.obj">
+      <Filter>GameCode\Models</Filter>
+    </Resource>
   </ItemGroup>
 </Project>
