--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="GameEngineLibraries\Components">
       <UniqueIdentifier>{f61ea21b-977c-4ceb-8763-3d654d337831}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameEngineLibraries\Systems">
+      <UniqueIdentifier>{2fdbc526-47d8-46ca-9dca-4c93a5b27624}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -72,9 +75,6 @@
     <ClCompile Include="SystemManager.cpp">
       <Filter>GameEngineLibraries\System Manager</Filter>
     </ClCompile>
-    <ClCompile Include="iSystem.cpp">
-      <Filter>GameEngineLibraries\System Manager</Filter>
-    </ClCompile>
     <ClCompile Include="GLFWWindow.cpp">
       <Filter>GameEngineLibraries</Filter>
     </ClCompile>
@@ -98,6 +98,12 @@
     </ClCompile>
     <ClCompile Include="ComponentShader.cpp">
       <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="iSystem.cpp">
+      <Filter>GameEngineLibraries\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderSystem.cpp">
+      <Filter>GameEngineLibraries\Systems</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -135,9 +141,6 @@
     <ClInclude Include="SystemManager.h">
       <Filter>GameEngineLibraries\System Manager</Filter>
     </ClInclude>
-    <ClInclude Include="iSystem.h">
-      <Filter>GameEngineLibraries\System Manager</Filter>
-    </ClInclude>
     <ClInclude Include="GLFWWindow.h">
       <Filter>GameEngineLibraries</Filter>
     </ClInclude>
@@ -161,6 +164,12 @@
     </ClInclude>
     <ClInclude Include="ComponentShader.h">
       <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="iSystem.h">
+      <Filter>GameEngineLibraries\Systems</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderSystem.h">
+      <Filter>GameEngineLibraries\Systems</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
