--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Main.cpp">
       <Filter>GameCode</Filter>
     </ClCompile>
-    <ClCompile Include="OpenGL.cpp">
-      <Filter>GameEngineLibraries\OpenGL</Filter>
-    </ClCompile>
     <ClCompile Include="ResourceManager.cpp">
       <Filter>GameEngineLibraries\Utility</Filter>
     </ClCompile>
@@ -105,12 +102,10 @@
     <ClCompile Include="RenderSystem.cpp">
       <Filter>GameEngineLibraries\Systems</Filter>
     </ClCompile>
+    <ClCompile Include="glad.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
-    <ClInclude Include="OpenGL.h">
-      <Filter>GameEngineLibraries\OpenGL</Filter>
-    </ClInclude>
     <ClInclude Include="ResourceManager.h">
       <Filter>GameEngineLibraries\Utility</Filter>
     </ClInclude>
@@ -171,12 +166,20 @@
     <ClInclude Include="RenderSystem.h">
       <Filter>GameEngineLibraries\Systems</Filter>
     </ClInclude>
+    <ClInclude Include="glad.h" />
+    <ClInclude Include="khrplatform.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngine.rc" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TestVertex.vert">
+      <Filter>GameCode\Shaders</Filter>
+    </None>
+    <None Include="TestFragment.frag">
+      <Filter>GameCode\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Useful Links.txt" />
