--- a/GameEngine/packages.config
+++ b/GameEngine/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssimpNet" version="4.1.0" targetFramework="native" />
   <package id="glfw" version="3.2.1.5" targetFramework="native" />
   <package id="glm" version="0.9.9" targetFramework="native" />
 </packages>
