--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -172,6 +172,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="RiggedFragment.frag" />
+    <None Include="RiggedVertex.vert" />
     <None Include="TestFragment.frag" />
     <None Include="TestVertex.vert" />
   </ItemGroup>
