--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -124,6 +124,7 @@
     <ClCompile Include="ComponentTexture.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="GLFWInput.cpp" />
     <ClCompile Include="GLFWWindow.cpp" />
     <ClCompile Include="iComponent.cpp" />
     <ClCompile Include="InputFunction.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="ComponentTexture.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="GLFWInput.h" />
     <ClInclude Include="GLFWWindow.h" />
     <ClInclude Include="iComponent.h" />
     <ClInclude Include="iModel.h" />
