--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -126,6 +126,7 @@
     <ClCompile Include="InputFunction.cpp">
       <Filter>GameEngineLibraries\Input Manager</Filter>
     </ClCompile>
+    <ClCompile Include="GLFWInput.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -213,6 +214,7 @@
     <ClInclude Include="InputMapping.h">
       <Filter>GameEngineLibraries\Input Manager</Filter>
     </ClInclude>
+    <ClInclude Include="GLFWInput.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngine.rc" />
