--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{5D68CAE3-7845-4E1F-9CA5-1B560135C1EB}</ProjectGuid>
     <RootNamespace>GameEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -135,6 +135,7 @@
     <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="iScene.cpp" />
     <ClCompile Include="iSystem.cpp" />
+    <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="OpenGL.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="InputSystem.h" />
     <ClInclude Include="iScene.h" />
     <ClInclude Include="iSystem.h" />
+    <ClInclude Include="LightManager.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="OpenGL.h" />
     <ClInclude Include="Projection.h" />
