--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClCompile Include="LoggingManager.cpp">
       <Filter>GameEngineLibraries\Logging Manager</Filter>
     </ClCompile>
+    <ClCompile Include="ComponentNormal.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -255,6 +258,9 @@
     <ClInclude Include="LoggingManager.h">
       <Filter>GameEngineLibraries\Logging Manager</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentNormal.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngine.rc" />
@@ -273,6 +279,12 @@
     <None Include="RiggedVertex.vert">
       <Filter>GameCode\Shaders</Filter>
     </None>
+    <None Include="NormalVertex.vert">
+      <Filter>GameCode\Shaders</Filter>
+    </None>
+    <None Include="NormalFragment.frag">
+      <Filter>GameCode\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Useful Links.txt" />
@@ -284,6 +296,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="container.jpg">
+      <Filter>GameCode\Textures</Filter>
+    </Image>
+    <Image Include="containerNormal.jpg">
       <Filter>GameCode\Textures</Filter>
     </Image>
   </ItemGroup>
