--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="GameEngineLibraries\Logging Manager">
       <UniqueIdentifier>{567f75f0-c8b0-46a5-9ae1-124e6632364f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameEngineLibraries\Physics Manager">
+      <UniqueIdentifier>{ed7564d2-a891-422f-b9b4-adedfe974c89}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -154,6 +157,12 @@
       <Filter>GameEngineLibraries\Logging Manager</Filter>
     </ClCompile>
     <ClCompile Include="ComponentNormal.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentDirection.cpp">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentPhysics.cpp">
       <Filter>GameEngineLibraries\Components</Filter>
     </ClCompile>
   </ItemGroup>
@@ -259,6 +268,12 @@
       <Filter>GameEngineLibraries\Logging Manager</Filter>
     </ClInclude>
     <ClInclude Include="ComponentNormal.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentDirection.h">
+      <Filter>GameEngineLibraries\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="ComponentPhysics.h">
       <Filter>GameEngineLibraries\Components</Filter>
     </ClInclude>
   </ItemGroup>
