--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -85,6 +85,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\538704\source\repos\Game-Engine\BulletPhysics\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link />
   </ItemDefinitionGroup>
@@ -118,6 +119,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AnimatedModel.cpp" />
+    <ClCompile Include="BulletPhysicsEngine.cpp" />
+    <ClCompile Include="CollisionCuboid.cpp" />
+    <ClCompile Include="CollisionShape.cpp" />
+    <ClCompile Include="CollisionSphere.cpp" />
     <ClCompile Include="ComponentDirection.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
     <ClCompile Include="ComponentModel.cpp" />
@@ -143,6 +148,8 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="OpenGL.cpp" />
+    <ClCompile Include="PhysicsManager.cpp" />
+    <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -155,7 +162,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AnimatedModel.h" />
+    <ClInclude Include="BulletPhysicsEngine.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CollisionCuboid.h" />
+    <ClInclude Include="CollisionShape.h" />
+    <ClInclude Include="CollisionSphere.h" />
     <ClInclude Include="ComponentDirection.h" />
     <ClInclude Include="ComponentInput.h" />
     <ClInclude Include="ComponentModel.h" />
@@ -180,6 +191,8 @@
     <ClInclude Include="LoggingManager.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="OpenGL.h" />
+    <ClInclude Include="PhysicsManager.h" />
+    <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="resource.h" />
