--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="ComponentTexture.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
+    <ClCompile Include="FollowPlaneCamera.cpp" />
     <ClCompile Include="GLFWInput.cpp" />
     <ClCompile Include="GLFWWindow.cpp" />
     <ClCompile Include="iComponent.cpp" />
@@ -182,6 +183,7 @@
     <ClInclude Include="ComponentTexture.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
+    <ClInclude Include="FollowPlaneCamera.h" />
     <ClInclude Include="GLFWInput.h" />
     <ClInclude Include="GLFWWindow.h" />
     <ClInclude Include="iComponent.h" />
@@ -236,6 +238,7 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="2k_earth_daymap.jpg" />
     <Image Include="container.jpg" />
     <Image Include="containerNormal.jpg" />
   </ItemGroup>
