--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -190,6 +190,9 @@
       <Filter>GameEngineLibraries\Utility\Models</Filter>
     </ClCompile>
     <ClCompile Include="LevelLoader.cpp" />
+    <ClCompile Include="FollowPlaneCamera.cpp">
+      <Filter>GameEngineLibraries\Camera</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -320,6 +323,9 @@
       <Filter>GameEngineLibraries\Utility\Models</Filter>
     </ClInclude>
     <ClInclude Include="LevelLoader.h" />
+    <ClInclude Include="FollowPlaneCamera.h">
+      <Filter>GameEngineLibraries\Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GameEngine.rc" />
@@ -364,6 +370,9 @@
       <Filter>GameCode\Textures</Filter>
     </Image>
     <Image Include="containerNormal.jpg">
+      <Filter>GameCode\Textures</Filter>
+    </Image>
+    <Image Include="2k_earth_daymap.jpg">
       <Filter>GameCode\Textures</Filter>
     </Image>
   </ItemGroup>
