--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -376,4 +376,9 @@
       <Filter>GameCode\Textures</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="Collectable.obj">
+      <Filter>GameCode\Models</Filter>
+    </Object>
+  </ItemGroup>
 </Project>
